feat: adjusted responsivenedd

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Scale Section -->
     <section class="sec1">
       <div class="scale">
-        <h1>Scale your career</h1>
+        <h1 class="secondary-heading">Scale your career</h1>
         <p>
           We understand the sruggles that entry level tech professionals face
           because they don't have work experience and we have created projects
