style: changed header styling

--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>ITH</title>
   </head>
   <body>
     <!-- Navigation -->
     <header class="header">
-      <div class="logo-container"><p>ITH</p></div>
+      <div class="header-container container">
+        <div class="logo-container">
+          <a href="./">ITH</a>
+        </div>
 
-      <nav class="nav">
-        <ul class="nav-menu">
-          <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Get Involved</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Our Programs</a>
-          </li>
-          <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
-        </ul>
-      </nav>
-      <label class="icon">
-        <i class="fa-solid fa-bars"></i>
-      </label>
+        <nav class="nav">
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="#" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Get Involved</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Our Programs</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact Us</a>
+            </li>
+            <li>
+              <a href="#" class="nav-btn">Donate</a>
+            </li>
+          </ul>
+        </nav>
+        <label class="icon">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+      </div>
     </header>
 
     <!-- Hero Section -->
@@ -220,7 +228,7 @@
     <!-- FAQS Section -->
     <section class="sec5">
       <h1 class="secondary-heading">FAQS ON IBADAN TALENT HOUSE</h1>
-      <div class="container">
+      <div class="containers">
         <h1>Most Frequently Asked Questions</h1>
         <p>
           Here are the most frequently asked questions you may check before
