feat: completed templating

--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
       </ul>
 
       <ul class="menu">
-        <li><a href="index.html" class="d">Home</a></li>
-        <li><a href="terms.html" class="d">Terms</a></li>
-        <li><a href="contact.html" class="d">Contact Us</a></li>
-        <li><a href="privacy-policy.html" class="d">Refund Policy</a></li>
+        <li><a href="./" class="d">Home</a></li>
+        <li><a href="./terms/" class="d">Terms</a></li>
+        <li><a href="./contact/" class="d">Contact Us</a></li>
+        <li><a href="./privacy-policy/" class="d">Refund Policy</a></li>
       </ul>
 
       <p>&copy; 2023 ITH Project. All rights reserved.</p>
