--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,7 @@
     <header class="header">
       <div class="header-container">
         <div class="logo-container">
-          <a href="./"><img src="../public/logo.png" alt="logo" /></a>
+          <a href="../"><img src="../public/logo.png" alt="logo" /></a>
         </div>
 
         <nav class="nav">
