feat: file structure development

--- a/index.html
+++ b/index.html
@@ -4,45 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ibadan Talent House</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/base.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./public/apple-touch-icon.png"
+      href="/public/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./public/favicon-32x32.png"
+      href="/public/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./public/favicon-16x16.png"
+      href="/public/favicon-16x16.png"
     />
-    <link rel="manifest" href="./public/site.webmanifest" />
-    <title>ITH</title>
+    <link rel="manifest" href="/public/site.webmanifest" />
   </head>
   <body>
     <!-- Navigation -->
     <header class="header">
       <div class="header-container">
         <div class="logo-container">
-          <a href="./"><img src="./public/logo.png" alt="logo" /></a>
+          <a href="/"><img src="/public/logo.png" alt="logo" /></a>
         </div>
-
         <nav class="nav">
           <ul class="nav-menu">
             <li class="nav-item">
-              <a href="./about/" class="nav-link">About Us</a>
+              <a href="/about/" class="nav-link">About Us</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Get Involved</a>
@@ -51,10 +50,10 @@
               <a href="#programs" class="nav-link">Our Programs</a>
             </li>
             <li class="nav-item">
-              <a href="./contact/" class="nav-link">Contact Us</a>
+              <a href="/contact/" class="nav-link">Contact Us</a>
             </li>
             <li>
-              <a href="./donate/" class="nav-btn">Donate</a>
+              <a href="/donate/" class="nav-btn">Donate</a>
             </li>
           </ul>
         </nav>
@@ -137,6 +136,84 @@
         </div>
         <div class="img1-cont">
           <img src="./assets/images/int2.jpg" alt="picture" />
+        </div>
+      </section>
+
+      <!--our program section-->
+      <section class="contain">
+        <h1 class="heading">Courses for you</h1>
+        <p class="primary-paragraph">
+          Here are some courses from our schools that we offer. Enroll and
+          kickstart your tech career
+        </p>
+
+        <div class="container">
+          <article class="card">
+            <img class="card-image" src="./assets/images/course3.png" alt="" />
+            <div class="card-box">
+              <h3>Web development</h3>
+              <p>
+                Web development is an exciting field that offers many
+                opportunities for creativity and innovation.Use various
+                programming languages such as HTML,CSS and Javascript to build
+                websites and web appilications.
+              </p>
+              <a href="#">
+                <span
+                  >Enroll now
+                  <ion-icon
+                    name="arrow-forward-outline"
+                    class="icon"
+                  ></ion-icon>
+                </span>
+              </a>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="card-image" src="./assets/images/course2.png" alt="" />
+            <div class="card-box">
+              <h3>Data science</h3>
+              <p>
+                Data Science involves using statistical and computational
+                methods to analyze and interpret data. Data science is a rapidly
+                growing field that is used in a variety of industries, including
+                healthcare, finance and marketing.
+              </p>
+              <a href="#">
+                <span
+                  >Enroll now
+                  <ion-icon
+                    name="arrow-forward-outline"
+                    class="icon"
+                  ></ion-icon>
+                </span>
+              </a>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="card-image" src="./assets/images/course1.png" alt="" />
+            <div class="card-box">
+              <h3>3D Animation</h3>
+              <p>
+                The process of creating three-dimensional moving image using
+                computer graphics, 3D animation is used in a variety of
+                industries including film, video games and advertising.It
+                involves creating models, textures And lighting to create
+                realistic or stylized animations.
+              </p>
+              <a href="#">
+                <span
+                  >Enroll now
+                  <ion-icon
+                    name="arrow-forward-outline"
+                    class="icon"
+                  ></ion-icon>
+                </span>
+              </a>
+            </div>
+          </article>
         </div>
       </section>
 
