--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/base.css" />
-    <link rel="stylesheet" href="/css/about.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -29,31 +29,30 @@
       href="/public/favicon-16x16.png"
     />
     <link rel="manifest" href="/public/site.webmanifest" />
-    <title>About Us Page</title>
   </head>
   <body>
     <!-- Navigation -->
     <header class="header">
       <div class="header-container">
         <div class="logo-container">
-          <a href="/"><img src="/public/logo.png" alt="" /></a>
+          <a href="/"><img src="/public/logo.png" alt="logo" /></a>
         </div>
         <nav class="nav">
           <ul class="nav-menu">
             <li class="nav-item">
-              <a href="index-new.html" class="nav-link">Home</a>
+              <a href="/about/" class="nav-link">About Us</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">About Us</a>
+              <a href="#" class="nav-link">Get Involved</a>
             </li>
             <li class="nav-item">
-              <a href="#programs" class="nav-link">Our Programs</a>
+              <a href="/#programs" class="nav-link">Our Programs</a>
             </li>
             <li class="nav-item">
-              <a href="./contact/" class="nav-link">Contact Us</a>
+              <a href="/contact/" class="nav-link">Contact Us</a>
             </li>
             <li>
-              <a href="donate.html" class="nav-btn">Donate</a>
+              <a href="/donate/" class="nav-btn">Donate</a>
             </li>
           </ul>
         </nav>
