--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/base.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/about.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
